# KyLink

./: .gitignore  AppRun  CAMERA_WIDGET_USAGE.md  CPP_FLUENT_UI_ANALYSIS.md  OPTIMIZATION_GUIDE.md  PROJECT_DOCUMENTATION.md  README.en.md  README.md  RESOURCE_COMPARISON.md  build_appimage.sh  check_size.ps1  cleanup.ps1  debug.md  kylin.desktop  mpp_info_explorer.sh  npu_info_explorer.sh  requirements.appimage.txt  rga_info_explorer.sh  呈现-素材组织思路-整合版.md  摄像头.md  留档-保存修改记录.md
Chatroom/: main.py  readme.md
Chatroom/core/: file_server.py  file_transfer.py  network.py  protocol.py
Chatroom/resources/emojis/: emoji_map.json
Chatroom/ui/: about_interface.py  chat_window.py  group_chat_dialog.py  main_window.py
Chatroom/ui/components/: __init__.py  animated_text_browser.py  camera_widget.py  emoji_picker.py  screenshot_tool.py
Chatroom/utils/: config.py  emoji_manager.py
Reference/: PyQt-Fluent-Widgets-API.md
cpp-chatroom/: .gitignore  BUGFIX_REPORT.md  BUILD_GUIDE.md  BUILD_REPORT.md  CMakeLists.txt  CROSS_COMPILE_PREP.md  GNUmakefile  README.md  RK3566 YOLO NPU 推理方案评估.md  RK3566交叉编译.md  camera-gpu-debug.md  opengl-gpu-debug.md  rk-npu-debug.txt  rk-opengl-debug.txt  rk-rga-debug.txt  rlnpu环境配置.md  工程方案演进.md  板端环境部署.md
cpp-chatroom/cmake/: aarch64-linux-gnu.cmake
cpp-chatroom/docs/: 留档-20251225-跨平台构建与用户发现修复.md  留档-20251225-跨平台视频流协议实现.md
cpp-chatroom/env/: setup-rk3566.sh
cpp-chatroom/feiqlib/: content.h  encoding.cpp  feiqcommu.cpp  feiqengine.cpp  feiqengine.h  feiqmodel.cpp  feiqmodel.h  ipmsg.h  parcelable.h  protocol.h  udpcommu.cpp  utils.cpp
cpp-chatroom/include/: AboutDialog.h  ChatWindow.h  FeiqBackend.h  FeiqTypes.h  FileTransferWorker.h  GroupChatDialog.h  MainWindow.h  NetworkManager.h  ScreenshotTool.h  protocol.h
cpp-chatroom/include/backend/: FeiqBackend.h  PerformanceMonitor.h  RgaSelfTest.h
cpp-chatroom/include/domain/: FeiqTypes.h
cpp-chatroom/include/npu/: InferenceGeometry.h  RgaPreprocessor.h  YoloV5Runner.h  postprocess.h
cpp-chatroom/include/ui/: CameraPreviewDialog.h  ChatWindow.h  GroupChatDialog.h  MainWindow.h  PerformanceAnalyticsDialog.h  ScreenshotTool.h  SettingsDialog.h  VideoPlayerDialog.h
cpp-chatroom/include/video/: VideoFrame.h  VideoReceiver.h  VideoStreamer.h
cpp-chatroom/src/: AboutDialog.cpp  ChatWindow.cpp  FeiqBackend.cpp  FileTransferWorker.cpp  GroupChatDialog.cpp  MainWindow.cpp  NetworkManager.cpp  ScreenshotTool.cpp  SettingsDialog.cpp  main.cpp  protocol.cpp
cpp-chatroom/src/app/: main.cpp
cpp-chatroom/src/backend/: FeiqBackend.cpp  PerformanceMonitor.cpp  RgaSelfTest.cpp
cpp-chatroom/src/npu/: RgaPreprocessor.cpp  RgaPreprocessor.h  YoloV5Runner.cpp  postprocess.cpp
cpp-chatroom/src/ui/: AboutDialog.cpp  CameraPreviewDialog.cpp  ChatWindow.cpp  GroupChatDialog.cpp  MainWindow.cpp  PerformanceAnalyticsDialog.cpp  ScreenshotTool.cpp  SettingsDialog.cpp  VideoPlayerDialog.cpp
cpp-chatroom/src/video/: VideoFrame.cpp  VideoReceiver.cpp  VideoStreamer.cpp
my_kylin_led_driver/: .Module.symvers.cmd  .modules.order.cmd  .my_kylin_led_driver.ko.cmd  .my_kylin_led_driver.mod.cmd  .my_kylin_led_driver.mod.o.cmd  .my_kylin_led_driver.o.cmd  Makefile  build_led  my_kylin_led_driver.c  my_kylin_led_driver.ko  my_kylin_led_driver_使用说明.md
